--- a/content/themes/windowfab/assets/scss/modules/_pages.scss
+++ b/content/themes/windowfab/assets/scss/modules/_pages.scss
@@ -102,7 +102,11 @@ Home: Categories
   }
 }
 .section-category__icon {
-  height: auto;
+  max-height: 125px;
+  max-width: 100%;
+}
+.section-category__text {
+  @include ie-flexfix;
 }
 .section-category__button {
   margin-top: auto;
@@ -183,7 +187,7 @@ Home: Image CTAs
       width: 8px;
       height: 100%;
       background: url('../img/vert-line-tan.png') left top repeat-x;
-      z-index: 999;
+      z-index: 200;
     }
 
     &:nth-of-type(odd) {
@@ -220,6 +224,9 @@ Home: Image CTAs
 .section-cta__title {
   @include button-text(1.125rem);
 }
+.section-cta__text {
+  @include ie-flexfix;
+}
 
 /*
 Home: Banner
@@ -236,10 +243,13 @@ Category Page
   @include break-md {
     display: flex;
     flex-direction: row;
+    height: 300px; // for IE11
     min-height: 300px;
     margin-bottom: 0;
 
     &:nth-of-type(odd) {
+      // there are several of these
+      // so consider adding a mixin
       .category-tile--txt:before {
         content: "";
         position: absolute;
@@ -250,7 +260,7 @@ Category Page
         height: 100%;
         background: url('../img/vert-line-tan.png') left top repeat-x;
         margin-left: -4px;
-        z-index: 999;
+        z-index: 200;
       }
     }
     &:nth-of-type(even) {
@@ -270,7 +280,7 @@ Category Page
         height: 100%;
         background: url('../img/vert-line-tan.png') left top repeat-x;
         margin-left: -4px;
-        z-index: 999;
+        z-index: 200;
       }
     }
   }
@@ -288,7 +298,7 @@ Category Page
     height: 8px;
     background: url('../img/horz-line-tan.png') left top repeat-x;
     margin-bottom: -4px;
-    z-index: 999;
+    z-index: 200;
   }
   &.category-tile--img:after {
     content: "";
@@ -304,9 +314,6 @@ Category Page
     &.category-tile--txt:after {
       content: "";
     }
-    /*.category-tile__author {
-      margin-top: auto;
-    }*/
   }
 }
 .category-tile--img {
@@ -343,6 +350,7 @@ Category Page
 }
 .category-tile__text {
   font-family: $heading-font;
+  @include ie-flexfix;
 
   p {
     margin: 0 0 1rem;
